Serialization tests and updates. Fixed issue that buffer manager was not serializing correctly.